# cargo-foobar

./: Cargo.toml  README.md
src/: bar.rs  foo.rs
