[package]
name = "cargo-foobar" 
version = "1.0.2" 
authors = ["myyrakle <sssang97@naver.com>"] 
description = "foobar"
keywords = ["test"] 
edition = "2018" 
license = "MIT" #라이센스
include = ["src/*.rs", "Cargo.toml"]
exclude = [] #업로드 제외
readme = "README.md" 
repository = "https://github.com/myyrakle/cargo-foobar" 
documentation = "https://github.com/myyrakle/cargo-foobar/blob/master/README.md" 
homepage = "https://github.com/myyrakle/cargo-foobar/blob/master/README.md" 

[dependencies]
atty = { version = "0.2.14", optional = true }
structopt = { version = "0.3.18", optional = true }

[[bin]]
name = "cargo-foo"
path = "src/foo.rs"
required-features = ["foo"]

[[bin]]
name = "cargo-bar"
path = "src/bar.rs"
required-features = ["bar"]

[features]
default = ["foo", "bar"]
foo = ["cli"]
bar = ["cli"]
cli = ["atty", "structopt"]
